outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_10-32-20/evaluations/problem_eval6276271598862412875_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later for efficiency. It also incorporates a "node entropy" metric to prioritize nodes with balanced distances to unvisited nodes, further refining the selection process.}
                                                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance later for efficiency. It also incorporates a "node entropy" metric to prioritize nodes with balanced distances to unvisited nodes, further refining the selection process.}
                                                                                                                                                                                         ^
SyntaxError: unmatched '}'
